Applied black style to notebooks

--- a/docs/tutorials/astroviper_tutorial_mosaics.ipynb
+++ b/docs/tutorials/astroviper_tutorial_mosaics.ipynb
@@ -586,6 +586,7 @@
     "# dask.config.set(scheduler=\"synchronous\")\n",
     "\n",
     "from toolviper.dask.client import local_client\n",
+    "\n",
     "viper_client = local_client(cores=4, memory_limit=\"4GB\")\n",
     "viper_client"
    ]
@@ -960,6 +961,7 @@
    "source": [
     "from xradio.measurement_set import open_processing_set\n",
     "import pandas as pd\n",
+    "\n",
     "pd.options.display.max_colwidth = 100\n",
     "\n",
     "intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
@@ -1656,7 +1658,7 @@
     }
    ],
    "source": [
-    "ps['Antennae_North.cal.lsrk_34']"
+    "ps[\"Antennae_North.cal.lsrk_34\"]"
    ]
   },
   {
@@ -2065,6 +2067,7 @@
     "\n",
     "from xradio.measurement_set import open_processing_set\n",
     "import pandas as pd\n",
+    "\n",
     "pd.options.display.max_colwidth = 100\n",
     "\n",
     "scan_intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
@@ -2083,25 +2086,42 @@
     "grid_params[\"fft_padding\"] = 1.0\n",
     "\n",
     "combined_field_and_source_xds = ps.xr_ps.get_combined_field_and_source_xds()\n",
-    "center_field_name = combined_field_and_source_xds.attrs['center_field_name']\n",
-    "grid_params[\"phase_direction\"] = combined_field_and_source_xds.FIELD_PHASE_CENTER_DIRECTION.sel(field_name=center_field_name)\n",
-    "#ps['Antennae_North.cal.lsrk_34'].xr_ms.get_field_and_source_xds().FIELD_PHASE_CENTER_DIRECTION.isel(field_name=0)\n",
+    "center_field_name = combined_field_and_source_xds.attrs[\"center_field_name\"]\n",
+    "grid_params[\"phase_direction\"] = (\n",
+    "    combined_field_and_source_xds.FIELD_PHASE_CENTER_DIRECTION.sel(\n",
+    "        field_name=center_field_name\n",
+    "    )\n",
+    ")\n",
+    "# ps['Antennae_North.cal.lsrk_34'].xr_ms.get_field_and_source_xds().FIELD_PHASE_CENTER_DIRECTION.isel(field_name=0)\n",
     "\n",
-    "spectral_params  = {}\n",
-    "frequency_coord = ps['Antennae_North.cal.lsrk_34'].frequency\n",
+    "spectral_params = {}\n",
+    "frequency_coord = ps[\"Antennae_North.cal.lsrk_34\"].frequency\n",
     "spectral_params[\"n_chunks\"] = 60\n",
     "\n",
     "polarization_params = {}\n",
     "\n",
-    "data_variables = [\"sky\", \"point_spread_function\", \"primary_beam\", \"visibility\"] #\"visibility_normalization\", \"uv_sampling_normalization\"\n",
+    "data_variables = [\n",
+    "    \"sky\",\n",
+    "    \"point_spread_function\",\n",
+    "    \"primary_beam\",\n",
+    "    \"visibility\",\n",
+    "]  # \"visibility_normalization\", \"uv_sampling_normalization\"\n",
     "\n",
     "os.system(\"rm -rf \" + image_name)\n",
-    "#n_chunks = 60\n",
+    "# n_chunks = 60\n",
     "from astroviper.distributed.imaging.cube_imaging_niter0 import cube_imaging_niter0\n",
     "\n",
-    "polarization_coord= ps['Antennae_North.cal.lsrk_34'].polarization\n",
+    "polarization_coord = ps[\"Antennae_North.cal.lsrk_34\"].polarization\n",
     "\n",
-    "cube_imaging_niter0(ps_store, image_name, grid_params, polarization_coord=polarization_coord, frequency_coord=frequency_coord, n_chunks=None, data_variables=data_variables)"
+    "cube_imaging_niter0(\n",
+    "    ps_store,\n",
+    "    image_name,\n",
+    "    grid_params,\n",
+    "    polarization_coord=polarization_coord,\n",
+    "    frequency_coord=frequency_coord,\n",
+    "    n_chunks=None,\n",
+    "    data_variables=data_variables,\n",
+    ")"
    ]
   },
   {
@@ -3351,14 +3371,16 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "#%matplotlib widget\n",
+    "# %matplotlib widget\n",
     "plt.figure()\n",
-    "img_xds.POINT_SPREAD_FUNCTION.isel(polarization=1, frequency=82).plot(cmap='viridis',vmin=0.0)\n",
+    "img_xds.POINT_SPREAD_FUNCTION.isel(polarization=1, frequency=82).plot(\n",
+    "    cmap=\"viridis\", vmin=0.0\n",
+    ")\n",
     "plt.figure()\n",
     "img_xds.PRIMARY_BEAM.isel(polarization=0, frequency=82).plot()\n",
     "plt.figure()\n",
-    "#img_xds.SKY.max(dim=\"frequency\").isel(polarization=0).plot(cmap='viridis',vmin=0.0)\n",
-    "img_xds.SKY.isel(polarization=0,frequency=82).plot(cmap='viridis',vmin=0.0)"
+    "# img_xds.SKY.max(dim=\"frequency\").isel(polarization=0).plot(cmap='viridis',vmin=0.0)\n",
+    "img_xds.SKY.isel(polarization=0, frequency=82).plot(cmap=\"viridis\", vmin=0.0)"
    ]
   },
   {
@@ -3396,28 +3418,32 @@
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, fixed\n",
     "\n",
+    "\n",
     "def plot_astroviper_vs_casa_weights_interactive(ms_xdt, freq_idx):\n",
     "    print()\n",
     "    import matplotlib.pyplot as plt\n",
     "\n",
     "    plt.figure()\n",
     "    fig = plt.figure(figsize=(10, 8))\n",
-    "    img_xds.SKY.isel(polarization=0,frequency=freq_idx).plot(cmap='viridis',vmin=0.0)\n",
+    "    img_xds.SKY.isel(polarization=0, frequency=freq_idx).plot(cmap=\"viridis\", vmin=0.0)\n",
     "    plt.show()\n",
-    "    plt.close(fig)   \n",
-    "    \n",
-    "    \n",
+    "    plt.close(fig)\n",
     "\n",
     "    plt.figure()\n",
     "    fig = plt.figure(figsize=(10, 8))\n",
-    "    img_xds.POINT_SPREAD_FUNCTION.real.isel(polarization=0,frequency=freq_idx).plot(cmap='viridis',vmin=0.0)\n",
+    "    img_xds.POINT_SPREAD_FUNCTION.real.isel(polarization=0, frequency=freq_idx).plot(\n",
+    "        cmap=\"viridis\", vmin=0.0\n",
+    "    )\n",
     "    plt.show()\n",
-    "    plt.close(fig)   \n",
+    "    plt.close(fig)\n",
+    "\n",
     "\n",
     "interact(\n",
     "    plot_astroviper_vs_casa_weights_interactive,\n",
     "    ms_xdt=fixed(img_xds),\n",
-    "    freq_idx=widgets.IntSlider(min=0, max=165, step=1, value=2, description=\"freq_chan\"),\n",
+    "    freq_idx=widgets.IntSlider(\n",
+    "        min=0, max=165, step=1, value=2, description=\"freq_chan\"\n",
+    "    ),\n",
     ")"
    ]
   },
