--- a/docs/tutorials/astroviper_tutorial_spectral_moment.ipynb
+++ b/docs/tutorials/astroviper_tutorial_spectral_moment.ipynb
@@ -596,6 +596,7 @@
    ],
    "source": [
     "from toolviper.dask.client import local_client\n",
+    "\n",
     "viper_client = local_client(cores=4, memory_limit=\"4GB\")\n",
     "viper_client\n",
     "\n",
@@ -1052,7 +1053,10 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "import dask\n",
-    "from graphviper.graph_tools.coordinate_utils import make_parallel_coord, make_frequency_coord\n",
+    "from graphviper.graph_tools.coordinate_utils import (\n",
+    "    make_parallel_coord,\n",
+    "    make_frequency_coord,\n",
+    ")\n",
     "from graphviper.graph_tools import map, reduce\n",
     "from astroviper.core.image_analysis.moment_max import moment_max\n",
     "from astroviper.distributed.imaging.utils import make_image_mosaic\n",
@@ -1070,17 +1074,21 @@
     "grid_params[\"fft_padding\"] = 1.0\n",
     "\n",
     "combined_field_and_source_xds = ps.xr_ps.get_combined_field_and_source_xds()\n",
-    "center_field_name = combined_field_and_source_xds.attrs['center_field_name']\n",
-    "grid_params[\"phase_direction\"] = combined_field_and_source_xds.FIELD_PHASE_CENTER_DIRECTION.sel(field_name=center_field_name)\n",
+    "center_field_name = combined_field_and_source_xds.attrs[\"center_field_name\"]\n",
+    "grid_params[\"phase_direction\"] = (\n",
+    "    combined_field_and_source_xds.FIELD_PHASE_CENTER_DIRECTION.sel(\n",
+    "        field_name=center_field_name\n",
+    "    )\n",
+    ")\n",
     "\n",
     "input_params = {}\n",
     "input_params[\"grid_params\"] = grid_params\n",
     "input_params[\"to_disk\"] = False\n",
-    "input_params[\"input_data_store\"]=ps_store\n",
-    "input_params[\"polarization\"] = [\"XX\",\"YY\"]\n",
+    "input_params[\"input_data_store\"] = ps_store\n",
+    "input_params[\"polarization\"] = [\"XX\", \"YY\"]\n",
     "input_params[\"time\"] = [0]\n",
     "input_params[\"frequency\"] = None\n",
-    "input_params['data_group'] = \"base\"\n",
+    "input_params[\"data_group\"] = \"base\"\n",
     "\n",
     "parallel_coords = {}\n",
     "# coord = make_frequency_coord(\n",
@@ -1088,27 +1096,34 @@
     "#     freq_delta=11231488.981445312,\n",
     "#     n_channels=166,\n",
     "# )\n",
-    "#coord = ps['Antennae_North.cal.lsrk.split_04'].frequency\n",
-    "coord = ps['Antennae_North.cal.lsrk_34'].frequency\n",
+    "# coord = ps['Antennae_North.cal.lsrk.split_04'].frequency\n",
+    "coord = ps[\"Antennae_North.cal.lsrk_34\"].frequency\n",
     "\n",
     "parallel_coords[\"frequency\"] = make_parallel_coord(coord=coord, n_chunks=20)\n",
-    "from graphviper.graph_tools.coordinate_utils import interpolate_data_coords_onto_parallel_coords\n",
-    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(parallel_coords, ps)\n",
+    "from graphviper.graph_tools.coordinate_utils import (\n",
+    "    interpolate_data_coords_onto_parallel_coords,\n",
+    ")\n",
+    "\n",
+    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(\n",
+    "    parallel_coords, ps\n",
+    ")\n",
     "display(HTML(dict_to_html(node_task_data_mapping)))\n",
     "\n",
     "import time\n",
+    "\n",
     "graph = map(\n",
     "    input_data=ps,\n",
     "    node_task_data_mapping=node_task_data_mapping,\n",
     "    node_task=make_image_mosaic,\n",
     "    input_params=input_params,\n",
-    "    in_memory_compute=False\n",
+    "    in_memory_compute=False,\n",
     ")\n",
     "\n",
     "input_params = {}\n",
     "viper_graph = reduce(graph, moment_max, input_params)\n",
     "\n",
     "from graphviper.graph_tools import generate_dask_workflow\n",
+    "\n",
     "dask_graph = generate_dask_workflow(viper_graph)"
    ]
   },
@@ -1825,7 +1840,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure()\n",
-    "img_xds.SKY.isel(polarization=0, frequency=0, dummy=0).plot.imshow(cmap='viridis',vmin=0.0)\n",
+    "img_xds.SKY.isel(polarization=0, frequency=0, dummy=0).plot.imshow(\n",
+    "    cmap=\"viridis\", vmin=0.0\n",
+    ")\n",
     "plt.figure()\n",
     "img_xds.PRIMARY_BEAM.isel(polarization=0, frequency=0, dummy=0).plot()"
    ]
