--- a/docs/tutorials/feather_tutorial_create_initial_images.ipynb
+++ b/docs/tutorials/feather_tutorial_create_initial_images.ipynb
@@ -736,15 +736,14 @@
     }
    ],
    "source": [
-    "from xradio.image.image import (\n",
-    "    make_empty_sky_image\n",
-    ")\n",
+    "from xradio.image.image import make_empty_sky_image\n",
     "import numpy as np\n",
-    "rad_per_arcsec = np.pi/180/3600\n",
+    "\n",
+    "rad_per_arcsec = np.pi / 180 / 3600\n",
     "skel_xds = make_empty_sky_image(\n",
     "    phase_center=[0.6, -0.2],\n",
     "    image_size=imsize,\n",
-    "    cell_size=[15*rad_per_arcsec, 15*rad_per_arcsec],\n",
+    "    cell_size=[15 * rad_per_arcsec, 15 * rad_per_arcsec],\n",
     "    chan_coords=np.linspace(1.4e9, 1.5e9, nchan),\n",
     "    pol_coords=[\"I\"],\n",
     "    time_coords=[0],\n",
@@ -1513,11 +1512,11 @@
     "\n",
     "sel_dict = {}\n",
     "if imsize[0] < 4096:\n",
-    "    blc = 2048 - imsize[0]//2\n",
+    "    blc = 2048 - imsize[0] // 2\n",
     "    l_slice = slice(blc, blc + imsize[0])\n",
     "    sel_dict[\"l\"] = l_slice\n",
     "if imsize[1] < 4096:\n",
-    "    blc = 2048 - imsize[1]//2\n",
+    "    blc = 2048 - imsize[1] // 2\n",
     "    m_slice = slice(blc, blc + imsize[1])\n",
     "    sel_dict[\"m\"] = m_slice\n",
     "xds_sd_temp = read_image(\"feather_sim_sd_c1_pI.im\").isel(sel_dict)\n",
@@ -2284,7 +2283,7 @@
    ],
    "source": [
     "xds_int_temp = read_image(\"feather_sim_vla_c1_pI.im\").isel(sel_dict)\n",
-    "#xds_int_temp\n",
+    "# xds_int_temp\n",
     "print(\"xds_int_temp sky shape\", xds_int_temp.SKY.shape)\n",
     "print(\"xds_int_temp beam shape\", xds_int_temp.BEAM.shape)\n",
     "print(\"xds_int_temp beam values\", xds_int_temp.BEAM.values)\n",
@@ -2902,12 +2901,11 @@
    "source": [
     "import dask.array as da\n",
     "import xarray as xr\n",
+    "\n",
     "dm = skel_xds.sizes\n",
     "sky_da_zeros = da.zeros(\n",
-    "    [\n",
-    "        dm[\"time\"], dm[\"frequency\"],\n",
-    "        dm[\"polarization\"], dm[\"l\"], dm[\"m\"]\n",
-    "    ], dtype=np.float32\n",
+    "    [dm[\"time\"], dm[\"frequency\"], dm[\"polarization\"], dm[\"l\"], dm[\"m\"]],\n",
+    "    dtype=np.float32,\n",
     ")\n",
     "sky_dims = list(skel_xds.dims)\n",
     "sky_dims.remove(\"beam_param\")\n",
@@ -2915,11 +2913,7 @@
     "sky_coords = {}\n",
     "for c in coords:\n",
     "    sky_coords[c] = skel_xds[c]\n",
-    "sky_xa_zeros = xr.DataArray(\n",
-    "    data=sky_da_zeros,\n",
-    "    coords=sky_coords,\n",
-    "    dims=sky_dims\n",
-    ")\n",
+    "sky_xa_zeros = xr.DataArray(data=sky_da_zeros, coords=sky_coords, dims=sky_dims)\n",
     "sky_xa_zeros"
    ]
   },
@@ -3516,16 +3510,14 @@
    ],
    "source": [
     "beam_da_zeros = da.zeros(\n",
-    "    [\n",
-    "        dm[\"time\"], dm[\"frequency\"],\n",
-    "        dm[\"polarization\"], dm[\"beam_param\"]\n",
-    "    ], dtype=np.float32\n",
+    "    [dm[\"time\"], dm[\"frequency\"], dm[\"polarization\"], dm[\"beam_param\"]],\n",
+    "    dtype=np.float32,\n",
     ")\n",
     "beam_dims = [\"time\", \"frequency\", \"polarization\", \"beam_param\"]\n",
     "beam_xa_zeros = xr.DataArray(\n",
     "    beam_da_zeros.copy(),\n",
     "    dims=beam_dims,\n",
-    "    coords={k: v for k, v in skel_xds.coords.items() if k in beam_dims + [\"velocity\"] }\n",
+    "    coords={k: v for k, v in skel_xds.coords.items() if k in beam_dims + [\"velocity\"]},\n",
     ")\n",
     "\n",
     "beam_xa_zeros"
@@ -3588,22 +3580,19 @@
    ],
    "source": [
     "import copy\n",
+    "\n",
     "for i in (0, 1):\n",
     "    xds = copy.deepcopy(skel_xds)\n",
     "    xds[\"SKY\"] = sky_xa_zeros.copy()\n",
     "    xds[\"BEAM\"] = beam_xa_zeros.copy()\n",
     "    for j in range(0, nchan, 16):\n",
     "        min_chan = j\n",
-    "        max_chan = min(j+16, nchan)\n",
+    "        max_chan = min(j + 16, nchan)\n",
     "        fx = xds_sd_temp if i == 0 else xds_int_temp\n",
-    "        xds[\"SKY\"][{\"frequency\": slice(min_chan, max_chan)}] = (\n",
-    "            fx[\"SKY\"].values\n",
-    "        )\n",
+    "        xds[\"SKY\"][{\"frequency\": slice(min_chan, max_chan)}] = fx[\"SKY\"].values\n",
     "        xds[\"SKY\"].attrs = {\"units\": \"Jy/beam\"}\n",
     "        print(f\"xds {id(xds)}\")\n",
-    "        xds[\"BEAM\"][{\"frequency\": slice(min_chan, max_chan)}] = (\n",
-    "            fx[\"BEAM\"].values\n",
-    "        )\n",
+    "        xds[\"BEAM\"][{\"frequency\": slice(min_chan, max_chan)}] = fx[\"BEAM\"].values\n",
     "        xds[\"BEAM\"].attrs = {\"units\": \"rad\"}\n",
     "    if i == 0:\n",
     "        xds_sd = xds\n",
@@ -3632,17 +3621,23 @@
     }
    ],
    "source": [
-    "bytes_in_dtype = {'float32':4,'double':8,'complex':16}\n",
+    "bytes_in_dtype = {\"float32\": 4, \"double\": 8, \"complex\": 16}\n",
     "\n",
-    "#chunking_dims_sizes = {'frequency':int_xds[\"sky\"].sizes['frequency']}\n",
-    "#memory_singleton_chunk = 3*np.product(np.array(list(chunking_dims_sizes.values())))\n",
-    "xds_sd['SKY'].sizes['frequency']\n",
+    "# chunking_dims_sizes = {'frequency':int_xds[\"sky\"].sizes['frequency']}\n",
+    "# memory_singleton_chunk = 3*np.product(np.array(list(chunking_dims_sizes.values())))\n",
+    "xds_sd[\"SKY\"].sizes[\"frequency\"]\n",
     "\n",
-    "singleton_chunk_sizes = dict(xds_sd['SKY'].sizes) \n",
-    "del singleton_chunk_sizes['frequency'] #Remove dimensions that will be chuncked on.\n",
+    "singleton_chunk_sizes = dict(xds_sd[\"SKY\"].sizes)\n",
+    "del singleton_chunk_sizes[\"frequency\"]  # Remove dimensions that will be chuncked on.\n",
     "fudge_factor = 1.1\n",
     "n_images_in_memory = 3.0\n",
-    "memory_singleton_chunk = n_images_in_memory*np.prod(np.array(list(singleton_chunk_sizes.values())))*fudge_factor*bytes_in_dtype[str(xds_sd['SKY'].dtype)]/(1024**3)\n",
+    "memory_singleton_chunk = (\n",
+    "    n_images_in_memory\n",
+    "    * np.prod(np.array(list(singleton_chunk_sizes.values())))\n",
+    "    * fudge_factor\n",
+    "    * bytes_in_dtype[str(xds_sd[\"SKY\"].dtype)]\n",
+    "    / (1024**3)\n",
+    ")\n",
     "\n",
     "\n",
     "memory_singleton_chunk"
@@ -4471,6 +4466,7 @@
     "import os, shutil\n",
     "\n",
     "from xradio.image import write_image\n",
+    "\n",
     "for xds, outfile in zip([xds_sd, xds_int], [\"sd.zarr\", \"int.zarr\"]):\n",
     "    if os.path.exists(outfile):\n",
     "        shutil.rmtree(outfile)\n",
