--- a/docs/tutorials/astroviper_fringefit_tutorial.ipynb
+++ b/docs/tutorials/astroviper_fringefit_tutorial.ipynb
@@ -77,7 +77,7 @@
     "def bl_inds(xds, a1, a2):\n",
     "    return (xds.baseline_antenna1_name == a1) & (xds.baseline_antenna2_name == a2) | (\n",
     "        xds.baseline_antenna1_name == a2\n",
-    "    ) & (xds.baseline_antenna2_name == a1)\n",
+    "    ) & (xds.baseline_antenna2_name == a1).compute()\n",
     "\n",
     "\n",
     "# We need an xds to get baselines from; I happen to know this one contains the interval we chose above\n",
