Fixes for hogbom clean demo notebook
Uses the deconvolve() function now, with `algorithm='hogbom'` passed in to it.
Some minor fixes for bugs that surfaced while fixing the notebook.

--- a/docs/hogbom_clean.ipynb
+++ b/docs/hogbom_clean.ipynb
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ret, model_image, residual_image = deconvolution.hogbom_clean(resid_xds, psf_xds, deconv_params={'gain':0.1, 'niter':500, 'threshold':0})"
+    "ret, model_image, residual_image = deconvolution.deconvolve(resid_xds, psf_xds, algorithm='hogbom', deconv_params={'gain':0.1, 'niter':501, 'threshold':0})"
    ]
   },
   {
