some changes as suggested by co-pilot

--- a/docs/core_tutorials/imaging/demo_standard_grid.ipynb
+++ b/docs/core_tutorials/imaging/demo_standard_grid.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "**DEMO OF standard gridder**\n",
     "\n",
-    "[Colab Link](https://colab.research.google.com/github/casangi/astroviper/blob/main/docs/core_tutorials/imaging/demo_standard_gridder.ipynb)"
+    "[Colab Link](https://colab.research.google.com/github/casangi/astroviper/blob/main/docs/core_tutorials/imaging/demo_standard_grid.ipynb)"
    ]
   },
   {
@@ -20,11 +20,11 @@
     "\n",
     "Description of notebook\n",
     "\n",
-    "The intial demo is to simulate a visibility set with 4 sources.\n",
+    "The initial demo is to simulate a visibility set with 4 sources.\n",
     "We demonstrate gridding those visibilities. \n",
     "Then we show the corrections needed to get the dirty image\n",
     "Then we grid those model visibility data with the same convolution using the standard gridder and Fourier transform that back to an image and compare the source position and values\n",
-    "The second part compare with casa imaging using a standard gridder for a test data set\n",
+    "The second part compares with casa imaging using a standard gridder for a test data set\n",
     "\n",
     "## Assumptions\n",
     "\n",
@@ -142,7 +142,7 @@
    "metadata": {},
    "source": [
     "Initialize some gridding parameters. Most are taken from the meta data info of the _ms4_\n",
-    "we'll use a prolate spheroidal function overampled by 100 and having a support of 7 pixels"
+    "we'll use a prolate spheroidal function oversampled by 100 and having a support of 7 pixels"
    ]
   },
   {
@@ -404,6 +404,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7284d897-24d7-4044-8958-52fb3f274f4f",
+   "metadata": {},
+   "source": [
+    "Correlations to Stokes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c8859165-c17e-4e77-9fbd-d50fa2250fa2",
@@ -411,17 +419,6 @@
    "outputs": [],
    "source": [
     "cube_dirty=np.sum(cube_dirty, axis=1)/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "752350f4-8297-46a1-a507-70ca1a76f75f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pl.imshow(cube_dirty[0,:,:]-cube_dirty[32,:,:])\n",
-    "pl.colorbar()"
    ]
   },
   {
@@ -515,11 +512,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86228fe1-67bf-46cc-8bd8-429ddda2e4d3",
+   "cell_type": "markdown",
+   "id": "8b1073f3-e4e2-4a61-b64a-b28fed3a78b2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Let's look at the difference casa edges are kind of masked so avoiding those in the difference"
    ]
@@ -527,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ae9a3f-6d8c-45a7-9cc1-7a62255e590e",
+   "id": "0999f8d2-db05-4833-964b-237e2a2482e0",
    "metadata": {},
    "outputs": [],
    "source": [
