Fix iteration_control notebook, add unit tests
Added the unit tests for the iteration-control module. Made some small fixes to
the notebook, since I moved the path of iteration_control to live in
core/imaging/imaging_utils rather than just core/imaging/

Added a convenience function in the ReturnDict to reset the StopCodes to zero,
while keeping the rest of the dict intact.

--- a/docs/core_tutorials/imaging/iteration_control_demo.ipynb
+++ b/docs/core_tutorials/imaging/iteration_control_demo.ipynb
@@ -70,17 +70,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d3c93ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[31mInit signature:\u001b[39m\n",
+       "IterationController(\n",
+       "    niter: int = \u001b[32m1000\u001b[39m,\n",
+       "    nmajor: int = -\u001b[32m1\u001b[39m,\n",
+       "    threshold: float = \u001b[32m0.0\u001b[39m,\n",
+       "    gain: float = \u001b[32m0.1\u001b[39m,\n",
+       "    cyclefactor: float = \u001b[32m1.0\u001b[39m,\n",
+       "    minpsffraction: float = \u001b[32m0.05\u001b[39m,\n",
+       "    maxpsffraction: float = \u001b[32m0.8\u001b[39m,\n",
+       "    cycleniter: int = -\u001b[32m1\u001b[39m,\n",
+       "    nsigma: float = \u001b[32m0.0\u001b[39m,\n",
+       ")\n",
+       "\u001b[31mDocstring:\u001b[39m     \n",
+       "Manages iteration control logic for deconvolution algorithms.\n",
+       "\n",
+       "The controller extracts needed statistics (peak residual, masksum, iterations\n",
+       "done, etc.) from ReturnDict internally, so callers don't need to manually\n",
+       "pass individual values.\n",
+       "\n",
+       "Attributes:\n",
+       "-----------\n",
+       "niter : int\n",
+       "    Maximum number of minor cycle iterations remaining\n",
+       "nmajor : int\n",
+       "    Maximum number of major cycles remaining (-1 = unlimited)\n",
+       "threshold : float\n",
+       "    Global stopping threshold (in Jy or image units)\n",
+       "gain : float\n",
+       "    CLEAN loop gain (typically 0.1)\n",
+       "cyclefactor : float\n",
+       "    Multiplier for PSF sidelobe to set cyclethreshold\n",
+       "minpsffraction : float\n",
+       "    Minimum PSF fraction for cyclethreshold calculation\n",
+       "maxpsffraction : float\n",
+       "    Maximum PSF fraction for cyclethreshold calculation\n",
+       "cycleniter : int\n",
+       "    Maximum iterations per minor cycle (-1 = use niter)\n",
+       "nsigma : float\n",
+       "    N-sigma threshold for stopping (0 = disabled)\n",
+       "\n",
+       "Major Cycle Tracking:\n",
+       "---------------------\n",
+       "major_done : int\n",
+       "    Number of major cycles completed so far\n",
+       "total_iter_done : int\n",
+       "    Total number of minor cycle iterations completed\n",
+       "\n",
+       "Convergence State:\n",
+       "------------------\n",
+       "stopcode : StopCode\n",
+       "    Current stop code as namedtuple (major, minor)\n",
+       "    Access via stopcode.major and stopcode.minor\n",
+       "stopdescription : str\n",
+       "    Human-readable description of stop reason\n",
+       "\u001b[31mInit docstring:\u001b[39m\n",
+       "Initialize the iteration controller with deconvolution parameters.\n",
+       "\n",
+       "Parameters:\n",
+       "-----------\n",
+       "niter : int, optional\n",
+       "    Maximum total number of CLEAN iterations (default: 1000)\n",
+       "\n",
+       "nmajor : int, optional\n",
+       "    Maximum number of major cycles (default: -1 for unlimited)\n",
+       "\n",
+       "threshold : float, optional\n",
+       "    Global stopping threshold in Jy (default: 0.0)\n",
+       "\n",
+       "gain : float, optional\n",
+       "    CLEAN loop gain, range (0, 1] (default: 0.1)\n",
+       "\n",
+       "cyclefactor : float, optional\n",
+       "    Multiplier for adaptive cyclethreshold (default: 1.0)\n",
+       "\n",
+       "minpsffraction : float, optional\n",
+       "    Minimum PSF sidelobe fraction (default: 0.05)\n",
+       "\n",
+       "maxpsffraction : float, optional\n",
+       "    Maximum PSF sidelobe fraction (default: 0.8)\n",
+       "\n",
+       "cycleniter : int, optional\n",
+       "    Max iterations per minor cycle (default: -1)\n",
+       "\n",
+       "nsigma : float, optional\n",
+       "    N-sigma threshold for stopping (default: 0.0, disabled)\n",
+       "\u001b[31mFile:\u001b[39m           ~/src/RADPS/astroviper/src/astroviper/core/imaging/imaging_utils/iteration_control.py\n",
+       "\u001b[31mType:\u001b[39m           type\n",
+       "\u001b[31mSubclasses:\u001b[39m     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Note: iteration_control is currently in development\n",
-    "# For this demo, we'll import from the local module\n",
-    "import sys\n",
-    "sys.path.insert(0, '/path/to/iteration_control')\n",
-    "\n",
-    "from iteration_control import IterationController\n",
+    "from astroviper.core.imaging.imaging_utils.iteration_control import IterationController\n",
     "IterationController?"
    ]
   },
@@ -115,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e25d49a2",
    "metadata": {},
    "outputs": [],
@@ -127,7 +219,7 @@
     "# Note: Adjust path as needed for your environment\n",
     "import sys\n",
     "sys.path.insert(0, '.')\n",
-    "from iteration_control import (\n",
+    "from astroviper.core.imaging.imaging_utils.iteration_control import (\n",
     "    IterationController,\n",
     "    ReturnDict,\n",
     "    merge_return_dicts,\n",
@@ -180,10 +272,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f8a2c3d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial Controller State:\n",
+      "  niter: 1000\n",
+      "  nmajor: 10\n",
+      "  threshold: 0.01 Jy\n",
+      "  cycleniter: 100\n",
+      "  cyclefactor: 1.5\n",
+      "\n",
+      "Starting major cycle loop...\n",
+      "\n",
+      "=== Major Cycle 1 ===\n",
+      "  Cycle controls: niter=100, threshold=0.3000 Jy\n",
+      "  Deconvolution: 12 iterations, peak: 1.000000 -> 0.282430 Jy\n",
+      "  Updated counts: niter remaining=988, nmajor remaining=9\n",
+      "                  total iterations done=12\n",
+      "\n",
+      "  *** CONVERGED: Continue iterations ***\n",
+      "  Final stopcode: StopCode(major=0, minor=0)\n",
+      "\n",
+      "=== Major Cycle 2 ===\n",
+      "  Cycle controls: niter=100, threshold=0.0847 Jy\n",
+      "  Deconvolution: 12 iterations, peak: 0.282430 -> 0.079766 Jy\n",
+      "  Updated counts: niter remaining=976, nmajor remaining=8\n",
+      "                  total iterations done=24\n",
+      "\n",
+      "  *** CONVERGED: Continue iterations ***\n",
+      "  Final stopcode: StopCode(major=0, minor=0)\n",
+      "\n",
+      "=== Major Cycle 3 ===\n",
+      "  Cycle controls: niter=100, threshold=0.0239 Jy\n",
+      "  Deconvolution: 12 iterations, peak: 0.079766 -> 0.022528 Jy\n",
+      "  Updated counts: niter remaining=964, nmajor remaining=7\n",
+      "                  total iterations done=36\n",
+      "\n",
+      "  *** CONVERGED: Continue iterations ***\n",
+      "  Final stopcode: StopCode(major=0, minor=0)\n",
+      "\n",
+      "=== Major Cycle 4 ===\n",
+      "  Cycle controls: niter=100, threshold=0.0100 Jy\n",
+      "  Deconvolution: 8 iterations, peak: 0.022528 -> 0.009698 Jy\n",
+      "  Updated counts: niter remaining=956, nmajor remaining=6\n",
+      "                  total iterations done=44\n",
+      "\n",
+      "  *** CONVERGED: Reached global stopping threshold (within mask) ***\n",
+      "  Final stopcode: StopCode(major=2, minor=0)\n",
+      "\n",
+      "\n",
+      "=== Final State ===\n",
+      "Total major cycles: 4\n",
+      "Total iterations: 44\n",
+      "Final peak residual: 0.009698 Jy\n",
+      "Stop code: StopCode(major=2, minor=0) - Reached global stopping threshold (within mask)\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize controller\n",
     "controller = IterationController(\n",
@@ -209,7 +359,7 @@
     "\n",
     "print(\"Starting major cycle loop...\\n\")\n",
     "\n",
-    "while controller.stopcode == 0:\n",
+    "while controller.stopcode.major == 0:\n",
     "    major_cycle += 1\n",
     "    print(f\"=== Major Cycle {major_cycle} ===\")\n",
     "    \n",
@@ -286,10 +436,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c5d7e8f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scenario A: Exhaust iteration limit\n",
+      "\n",
+      "Result: Reached the iteration limit\n",
+      "Stopcode: StopCode(major=1, minor=0)\n",
+      "Total iterations: 50\n",
+      "Final peak: 0.005154 Jy\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Controller with low niter - will exhaust iterations before reaching threshold\n",
     "controller_A = IterationController(\n",
@@ -304,7 +468,7 @@
     "current_peak = 1.0\n",
     "print(\"Scenario A: Exhaust iteration limit\\n\")\n",
     "\n",
-    "while controller_A.stopcode == 0:\n",
+    "while controller_A.stopcode.major == 0:\n",
     "    current_rd = create_return_dict(current_peak, 0, 100, 0.2)\n",
     "    cycleniter, cyclethresh = controller_A.calculate_cycle_controls(current_rd)\n",
     "    \n",
@@ -331,10 +495,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f1a2b3c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scenario B: Exhaust major cycle limit\n",
+      "\n",
+      "Result: Reached the major cycle limit (nmajor)\n",
+      "Stopcode: StopCode(major=9, minor=0)\n",
+      "Major cycles done: 3\n",
+      "Total iterations: 36\n",
+      "Final peak: 0.022528 Jy\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Controller with low nmajor - will exhaust major cycles\n",
     "controller_B = IterationController(\n",
@@ -349,7 +528,7 @@
     "current_peak = 1.0\n",
     "print(\"Scenario B: Exhaust major cycle limit\\n\")\n",
     "\n",
-    "while controller_B.stopcode == 0:\n",
+    "while controller_B.stopcode.major == 0:\n",
     "    current_rd = create_return_dict(current_peak, 0, 100, 0.2)\n",
     "    cycleniter, cyclethresh = controller_B.calculate_cycle_controls(current_rd)\n",
     "    \n",
@@ -377,10 +556,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "i9j0k1l2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scenario C: Zero mask (no valid pixels)\n",
+      "\n",
+      "Result: Zero mask\n",
+      "Stopcode: StopCode(major=7, minor=0)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Simulate mask becoming empty (no valid pixels to clean)\n",
     "controller_C = IterationController(\n",
@@ -415,10 +606,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "q7r8s9t0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== First Deconvolution Run ===\n",
+      "Initial parameters: niter=100, threshold=0.05 Jy\n",
+      "\n",
+      "First run completed: Reached global stopping threshold (within mask)\n",
+      "Peak residual: 0.047101 Jy\n",
+      "Total iterations: 29\n",
+      "\n",
+      "=== Updating Parameters and Continuing ===\n",
+      "Parameters updated successfully:\n",
+      "  niter: 200\n",
+      "  threshold: 0.01 Jy\n",
+      "  nmajor: 5\n",
+      "\n",
+      "Continuing deconvolution...\n",
+      "\n",
+      "Second run completed: Reached global stopping threshold (within mask)\n",
+      "Final peak residual: 0.009698 Jy\n",
+      "Total iterations: 44\n",
+      "Total major cycles: 5\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize controller with modest parameters\n",
     "controller_interactive = IterationController(\n",
@@ -437,7 +654,7 @@
     "run = 1\n",
     "\n",
     "# First run\n",
-    "while controller_interactive.stopcode == 0:\n",
+    "while controller_interactive.stopcode.major == 0:\n",
     "    current_rd = create_return_dict(current_peak, 0, 100, 0.2)\n",
     "    cycleniter, cyclethresh = controller_interactive.calculate_cycle_controls(current_rd)\n",
     "    \n",
@@ -467,13 +684,12 @@
     "    print(f\"  nmajor: {controller_interactive.nmajor}\\n\")\n",
     "    \n",
     "    # Reset stopcode to continue\n",
-    "    controller_interactive.stopcode = 0\n",
-    "    controller_interactive.stopdescription = \"\"\n",
+    "    controller_interactive.reset_stopcode()\n",
     "    \n",
     "    print(\"Continuing deconvolution...\\n\")\n",
     "    \n",
     "    # Second run\n",
-    "    while controller_interactive.stopcode == 0:\n",
+    "    while controller_interactive.stopcode.major == 0:\n",
     "        current_rd = create_return_dict(current_peak, 0, 100, 0.2)\n",
     "        cycleniter, cyclethresh = controller_interactive.calculate_cycle_controls(current_rd)\n",
     "        \n",
@@ -512,10 +728,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c9d0e1f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created ReturnDict with entries:\n",
+      "  Key(time=0, pol=0, chan=0): peakres=0.9875, iter_done=108, masksum=100\n",
+      "  Key(time=0, pol=1, chan=0): peakres=0.9183, iter_done=87, masksum=100\n",
+      "  Key(time=0, pol=0, chan=1): peakres=0.9099, iter_done=118, masksum=90\n",
+      "  Key(time=0, pol=1, chan=1): peakres=0.8446, iter_done=102, masksum=90\n",
+      "  Key(time=0, pol=0, chan=2): peakres=0.7558, iter_done=103, masksum=80\n",
+      "  Key(time=0, pol=1, chan=2): peakres=0.7334, iter_done=119, masksum=80\n"
+     ]
+    }
+   ],
    "source": [
     "# Create ReturnDict with multiple time/pol/chan entries\n",
     "rd_multi = ReturnDict()\n",
@@ -554,10 +784,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "k7l8m9n0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall peak residual: 0.987454 Jy\n",
+      "Total iterations: 637\n",
+      "\n",
+      "Channel 1 peak residual: 0.909866 Jy\n",
+      "Channel 1 iterations: 220\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract overall statistics\n",
     "peak_residual = get_peak_residual_from_returndict(rd_multi)\n",
@@ -584,10 +826,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "s3t4u5v6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merging ReturnDicts from 3 workers...\n",
+      "\n",
+      "Merged ReturnDict entries:\n",
+      "  Key(time=0, pol=0, chan=0): peakres=0.9500, iter_done=100\n",
+      "  Key(time=0, pol=0, chan=1): peakres=0.8500, iter_done=110\n",
+      "  Key(time=0, pol=0, chan=2): peakres=0.7500, iter_done=95\n",
+      "\n",
+      "Global peak residual: 0.9500 Jy\n",
+      "Total iterations across all workers: 305\n"
+     ]
+    }
+   ],
    "source": [
     "# Simulate results from 3 different workers processing different channels\n",
     "rd_worker1 = create_return_dict(0.95, 100, 100, 0.2, time=0, pol=0, chan=0)\n",
@@ -622,10 +880,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a1b2c3d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Convergence check result:\n",
+      "  Stopcode: StopCode(major=0, minor=0)\n",
+      "  Description: Continue iterations\n",
+      "  Iterations remaining: 195\n",
+      "  Major cycles done: 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Create controller and check convergence using merged results\n",
     "controller_merge = IterationController(\n",
